Renamed Lua debugger.getsymboladdress -> getsymboloffset and added the function documentation.

--- a/web/help/LuaFunctionsList.html
+++ b/web/help/LuaFunctionsList.html
@@ -504,6 +504,10 @@
 <p class="rvps2"><span class="rvts103"><br/></span></p>
 <p class="rvps2"><span class="rvts57">Resets the instructions counter.</span></p>
 <p class="rvps2"><span class="rvts57"><br/></span></p>
+<p class="rvps2"><span class="rvts103">int debugger.getsymboloffset(string name [, int bank])</span></p>
+<p class="rvps2"><span class="rvts103"><br/></span></p>
+<p class="rvps2"><span class="rvts57">Gets the offset (usually the CPU address) of a debug symbol. Returns -1 if the symbol is not found.</span></p>
+<p class="rvps2"><span class="rvts57"><br/></span></p>
 <p class="rvps2"><span class="rvts57"><br/></span></p>
 <p class="rvps2"><span class="rvts111">Joypad Library</span></p>
 <p class="rvps2"><span class="rvts57"><br/></span></p>
