Updated 2.6.5 web page press release.

--- a/web/pressrelease-2.6.5.html
+++ b/web/pressrelease-2.6.5.html
@@ -40,7 +40,7 @@
 	</div>
 <div id="page_content">
 <h1>FCEUX 2.6.5 Maintenance Release</h1>
-<p>01 February 2023</p>
+<p>07 February 2023</p>
 <p>
 The 2.6.5 release is a maintenance update that contains various fixes from a back log of bugs and feature requests over the past year.
 </p>
@@ -96,6 +96,7 @@ Now ensures that logged output is flushed to disk when emulator is paused. This 
 <h3>Lua</h3>
 Implemented support for input.get() lua function binding.<br>
 Added lua script loading via file drag and drop feature.<br>
+Added new debugger.getsymboloffset lua function binding<br>
 
 <h3>Build</h3>
 Added cmake SOURCE_DATE_EPOCH hook to allow setting of UTC timestamp for reproducible binary builds.<br>
