Updated web page download links for 2.6.5 release.

--- a/web/home.html
+++ b/web/home.html
@@ -53,10 +53,10 @@
 	<p>&nbsp;</p>
 		
 	<h1>Latest Release</h1>
-	<p><span class="largerfont">FCEUX 2.6.4</span><br/>
-	24 March 2022</p>
-        <p>The 2.6.4 release is a maintenance update that fixes a couple bugs for the Qt/SDL port.</p>
-	<p><a href="help/WhatsNew264.html">Full changelog</a></p>
+	<p><span class="largerfont">FCEUX 2.6.5</span><br/>
+	07 February 2023</p>
+	<p>The 2.6.5 release is a maintenance update that contains various fixes from a back log of bugs and feature requests over the past year.</p>
+	<p><a href="help/WhatsNew265.html">Full changelog</a></p>
 	<p>
 	<hr>
 	<br>Windows Port Debugging Environment for Version 2.2.0<br><a href="assets/debugging_environment_1900px.png"><img alt="FCEUX as a debugging environment" src="assets/debugging_environment_640px.png"></a></p>
