--- a/web/download.html
+++ b/web/download.html
@@ -73,10 +73,12 @@
 		
 		<h3>Download</h3>
 		<ul>
-			<li><a href="http://sourceforge.net/projects/fceultra/files/Binaries/2.6.4/fceux-2.6.4-win32.zip/download">FCEUX 2.6.4 win32 Binary</a></li>
-			<li><a href="http://sourceforge.net/projects/fceultra/files/Binaries/2.6.4/qfceux-2.6.4-win64.zip/download">FCEUX 2.6.4 Qt/SDL win64 Binary</a></li>
-			<li><a href="http://sourceforge.net/projects/fceultra/files/Binaries/2.6.4/fceux-2.6.4-Darwin.dmg/download">FCEUX 2.6.4 MacOSX Binary</a></li>
-			<li><a href="https://sourceforge.net/projects/fceultra/files/latest/download">FCEUX 2.6.4 src</a></li>
+			<li><a href="https://github.com/TASEmulators/fceux/releases/download/v2.6.5/fceux-2.6.5-win32.zip">FCEUX 2.6.5 win32 Binary</a></li>
+			<li><a href="https://github.com/TASEmulators/fceux/releases/download/v2.6.5/fceux-2.6.5-win64.zip">FCEUX 2.6.5 win64 Binary</a></li>
+			<li><a href="https://github.com/TASEmulators/fceux/releases/download/v2.6.5/fceux-2.6.5-win64-QtSDL.zip">FCEUX 2.6.5 Qt/SDL win64 Binary</a></li>
+			<li><a href="https://github.com/TASEmulators/fceux/releases/download/v2.6.5/fceux-2.6.5-Darwin.dmg">FCEUX 2.6.5 MacOSX Binary</a></li>
+			<li><a href="https://github.com/TASEmulators/fceux/archive/refs/tags/v2.6.5.tar.gz">FCEUX 2.6.4 src (tgz)</a></li>
+			<li><a href="https://github.com/TASEmulators/fceux/archive/refs/tags/v2.6.5.zip">FCEUX 2.6.4 src (zip)</a></li>
 		</ul>
 
 		<p>If you would like to test the current in-development version of FCEUX, interim builds are available here:</p>
