Updated README and macOSX build from source instructions to include optional dependency libarchive.

--- a/web/osx.html
+++ b/web/osx.html
@@ -81,6 +81,7 @@
 		 brew install qt5
 		 brew install sdl2
 		 brew install minizip
+		 brew install libarchive (optional dependency for 7zip archive support)
 		 brew install ffmpeg (optional dependency but recommended for AVI recording)
 		 brew install x264   (optional dependency but recommended for AVI recording)
 		 </pre>
