--- a/web/home.html
+++ b/web/home.html
@@ -53,10 +53,11 @@
 	<p>&nbsp;</p>
 		
 	<h1>Latest Release</h1>
-	<p><span class="largerfont">FCEUX 2.6.5</span><br/>
-	07 February 2023</p>
-	<p>The 2.6.5 release is a maintenance update that contains various fixes from a back log of bugs and feature requests over the past year.</p>
-	<p><a href="help/WhatsNew265.html">Full changelog</a></p>
+	<p><span class="largerfont">FCEUX 2.6.6</span><br/>
+	26 August 2023</p>
+	<p>The 2.6.6 release is mainly a maintenance update for the mappers and emulation core with a few new features added in.<br>
+	Some of these new features apply only to the Qt/SDL version of the GUI.</p>
+	<p><a href="help/WhatsNew266.html">Full changelog</a></p>
 	<p>
 	<hr>
 	<br>Windows Port Debugging Environment for Version 2.2.0<br><a href="assets/debugging_environment_1900px.png"><img alt="FCEUX as a debugging environment" src="assets/debugging_environment_640px.png"></a></p>
